# synthetic-security-dataset-generator

./: README.md  pyproject.toml
data/output/: code.json  code_graph.csv  code_manifest.json  logs.json  logs_graph.csv  logs_manifest.json  phishing.json  phishing_graph.csv  phishing_manifest.json  phishing_report.json  phishing_split_manifest.json  phishing_test.json  phishing_train.json  phishing_validation.json  user_behavior.json  user_behavior_graph.csv  user_behavior_manifest.json
examples/: benchmark.py  train_simple_model.py
synthetic_security_dataset_generator/: __init__.py
synthetic_security_dataset_generator/cli/: main.py
synthetic_security_dataset_generator/core/: base_generator.py  config.py  dataset_manager.py  labeling_engine.py  randomness_engine.py  reporting.py  schema.py  validator.py
synthetic_security_dataset_generator/dataset_generators/: __init__.py  code_vuln_generator.py  log_generator.py  phishing_generator.py  user_behavior_generator.py
synthetic_security_dataset_generator/exporters/: csv_exporter.py  graph_exporter.py  json_exporter.py  parquet_exporter.py
synthetic_security_dataset_generator/heuristics/: __init__.py  attack_patterns.py  phishing_patterns.py  vuln_patterns.py
synthetic_security_dataset_generator/utils/: entropy_utils.py  ml_utils.py  record_utils.py  string_utils.py  time_utils.py
tests/: test_cli_and_exporters.py  test_generators.py  test_schema_validation.py
